@@ -105,7 +105,7 @@
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-math3</artifactId>
-      <version>3.5</version>
+      <version>3.6.1</version>
     </dependency>
     <dependency>
       <groupId>org.frege-lang</groupId>
@@ -115,12 +115,17 @@
     <dependency>
       <groupId>org.python</groupId>
       <artifactId>jython-standalone</artifactId>
-      <version>2.7.1</version>
+      <version>2.7.2b3</version>
     </dependency>
     <dependency>
       <groupId>org.jruby</groupId>
       <artifactId>jruby-complete</artifactId>
       <version>9.1.17.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.beanshell</groupId>
+      <artifactId>bsh</artifactId>
+      <version>2.0b5</version>
     </dependency>
   </dependencies>
 </project>
