@@ -20,5 +20,15 @@
         <dependency org="com.github.rjolly" name="flying-saucer" rev="9.1.20" conf="runtime->default"/>
         <dependency org="com.github.rjolly" name="scas_0.22" rev="3.0" conf="runtime->default"/>
         <dependency org="ch.epfl.lamp" name="dotty-compiler_0.22" rev="0.22.0-RC1" conf="runtime->default"/>
+        <dependency org="de.uni-mannheim.rz.krum" name="jas" rev="2.6.5988" conf="runtime->default">
+            <exclude org="org.apache.logging.log4j" module="log4j-core" name="*" type="*" ext="*" conf="" matcher="exact"/>
+            <exclude org="org.apache.logging.log4j" module="log4j-api" name="*" type="*" ext="*" conf="" matcher="exact"/>
+        </dependency>
+        <dependency org="org.apache.logging.log4j" name="log4j-core" rev="2.13.0" conf="runtime->default"/>
+        <dependency org="org.apache.logging.log4j" name="log4j-api" rev="2.13.0" conf="runtime->default"/>
+        <dependency org="cc.redberry" name="rings" rev="2.5.7" conf="runtime->default">
+            <exclude org="org.apache.commons" module="commons-math3" name="*" type="*" ext="*" conf="" matcher="exact"/>
+        </dependency>
+        <dependency org="org.apache.commons" name="commons-math3" rev="3.5" conf="runtime->default"/>
     </dependencies>
 </ivy-module>
