@@ -7,13 +7,15 @@
 
     * Upgraded to Snuggletex 1.3.0
 
-    * Tested script engine:
+    * Tested script engines:
 
       org.scala-lang#scala-compiler;2.11.0-M6
+      org.python#jython-standalone;2.7.2b3
 
-    * Tested library:
+    * Tested libraries:
 
       com.github.rjolly#scas_2.11.0-M6;2.1.1
+      org.apache.commons#commons-math3;3.6.1
 
 
   In version 5.2.1:
